@@ -453,9 +453,9 @@ contentscanexceptions = off
 %if %%activer_squid_auth == 'non'
 authplugin = '/etc/dansguardian/dansguardian$z/common/ip.conf'
 %else
-authplugin = '/etc/dansguardian/dansguardian0/authplugins/proxy-ntlm.conf'
-authplugin = '/etc/dansguardian/dansguardian0/authplugins/proxy-basic.conf'
-authplugin = '/etc/dansguardian/dansguardian0/common/ip.conf'
+authplugin = '/etc/dansguardian/dansguardian$z/authplugins/proxy-ntlm.conf'
+authplugin = '/etc/dansguardian/dansguardian$z/authplugins/proxy-basic.conf'
+authplugin = '/etc/dansguardian/dansguardian$z/common/ip.conf'
 %end if
 #authplugin = '/etc/dansguardian/dansguardian$z/authplugins/ident.conf'
 
