@@ -1,8 +1,12 @@
 #!/bin/sh
 
+%if %%active_sarg == "oui"
 if [ -x /usr/sbin/sarg-reports1 ]; then
   /usr/sbin/sarg-reports1 daily
 fi
 if [ -x /usr/sbin/sarg-reports2 ]; then
   /usr/sbin/sarg-reports2 daily
 fi
+%else
+# SARG inactif
+%end if
